Used sealed type instead of an enum for errors