@@ -8,13 +8,9 @@ import java.util.Set;
 
 import static dev.nipafx.args.ArgsDefinitionErrorCode.ILL_DEFINED_ARGS_TYPE;
 import static dev.nipafx.args.ArgsDefinitionErrorCode.MULTIPLE_ACTIONS;
-import static dev.nipafx.args.ArgsParseErrorCode.FAULTY_ACTION;
-import static dev.nipafx.args.ArgsParseErrorCode.MISSING_ARGUMENT;
-import static dev.nipafx.args.ArgsParseErrorCode.UNPARSEABLE_VALUE;
 import static dev.nipafx.args.Check.internalErrorOnNull;
 import static java.util.Arrays.stream;
 import static java.util.function.Function.identity;
-import static java.util.stream.Collectors.joining;
 import static java.util.stream.Collectors.toMap;
 
 class ArgsModeFilter {
@@ -76,22 +72,16 @@ class ArgsModeFilter {
 		actionFound = true;
 
 		var valueTypesByName = createValuesByTypeName(type);
-		var allowedValues = valueTypesByName
-				.keySet().stream()
-				.collect(joining("', '", "'", "'"));
-
-		if (argList.size() == 0) {
-			String message = "No arguments provided - first argument must be one of [ %s ].".formatted(allowedValues);
-			errors.add(new ArgsMessage(FAULTY_ACTION, message));
-		} else {
-			var value = argList.get(0);
+		if (argList.isEmpty())
+			errors.add(new ArgsMessage.MissingAction(valueTypesByName.keySet()));
+		else {
+			var value = argList.getFirst();
 			var valueType = valueTypesByName.get(value);
 
-			if (valueType == null) {
-				var message = "First argument '%s' did not match any of the allowed values: [ %s ].".formatted(value, allowedValues);
-				errors.add(new ArgsMessage(FAULTY_ACTION, message));
-			} else {
-				argList.remove(0);
+			if (valueType == null)
+				errors.add(new ArgsMessage.UnknownAction(valueTypesByName.keySet(), value));
+			else {
+				argList.removeFirst();
 				recordTypes.add(valueType);
 			}
 		}
@@ -99,29 +89,20 @@ class ArgsModeFilter {
 
 	private void processMode(Class<?> type) {
 		// create names of argument and values
-		var argumentName = "--" + createArgumentName(type);
+		var modeName = createArgumentName(type);
 		var valueTypesByName = createValuesByTypeName(type);
 
 		// detect and remove arguments
-		var argumentIndex = argList.indexOf(argumentName);
-		if (argumentIndex == -1) {
-			String message = "No value for required argument '%s'.".formatted(argumentName);
-			errors.add(new ArgsMessage(MISSING_ARGUMENT, message));
-		} else if (argumentIndex == argList.size()) {
-			String message = "No value for required argument '%s'.".formatted(argumentName);
-			errors.add(new ArgsMessage(MISSING_ARGUMENT, message));
-		} else {
+		var argumentIndex = argList.indexOf("--" + modeName);
+		if (argumentIndex == -1)
+			errors.add(new ArgsMessage.MissingArgument(modeName));
+		else {
 			var value = argList.get(argumentIndex + 1);
 			var valueType = valueTypesByName.get(value);
 
-			if (valueType == null) {
-				var allowedValues = valueTypesByName
-						.keySet().stream()
-						.collect(joining("', '", "'", "'"));
-				var message = "Value '%s' did not match any of the values allowed for '%s': [ %s ]."
-						.formatted(value, argumentName, allowedValues);
-				errors.add(new ArgsMessage(UNPARSEABLE_VALUE, message));
-			} else {
+			if (valueType == null)
+				errors.add(new ArgsMessage.IllegalModeValue(modeName, valueTypesByName.keySet(), value));
+			else {
 				argList.remove(argumentIndex + 1);
 				argList.remove(argumentIndex);
 				recordTypes.add(valueType);
